erDiagram
  USERS {
    string id PK
    string username UK
    string email UK
    string password_hash
    string photo "default.jpg"
    string bio
    boolean isAdmin "default: false"
    boolean isMod "default: false"
    date lastLogin
    boolean isVerified "default: false"
    object preferences {
      string language "default: en"
      object notifications {
        boolean email
        boolean push
      }
    }
    object stats {
      int tripsCount
      int reviewsCount
      int followersCount
      int followingCount
    }
    date createdAt
    date updatedAt
  }
  TRIPS {
    string id PK
    string user_id FK
    string title
    date start_date
    date end_date
    array destinations
    string status "enum: [planning, ongoing, completed, cancelled]"
    boolean isPublic "default: true"
    object budget {
      number amount
      string currency "default: USD"
    }
    array activities {
      string place_id FK
      date date
      string notes
    }
    date createdAt
    date updatedAt
  }
  DESTINATIONS {
    string id PK
    string name
    string description
    string location
    string photo
  }
  PLACES {
    string id PK
    string destination_id FK
    string type
    string name
    string description
    string photo "default: default.jpg"
    number average_rating "default: 0"
    string price_range "enum: [$, $$, $$$, $$$$]"
    string opening_hours
    string address
    date createdAt
    date updatedAt
  }
  REVIEWS {
    string id PK
    string user_id FK
    string place_id FK
    number rating "min: 1, max: 5"
    string comment
    array photos {
      string url
      string caption
      date uploaded_at
    }
    object helpful_votes {
      number count
      array users
    }
    date visit_date
    object categories {
      number cleanliness
      number service
      number value
      number atmosphere
    }
    date createdAt
    date updatedAt
  }
  FOLLOWS {
    string user_id FK
    string follower_id FK
    date createdAt
    date updatedAt
  }
  POSTS {
    string id PK
    string user_id FK
    string content
    string media
    string type
    string visibility
    array tags
    object location
    date createdAt
    date updatedAt
  }
  COMMENTS {
    string id PK
    string post_id FK
    string user_id FK
    string content
    string parent_comment_id
    date createdAt
    date updatedAt
  }
  LIKES {
    string id PK
    string user_id FK
    string target_type
    string target_id
    date createdAt
  }
  NOTIFICATIONS {
    string id PK
    string user_id FK
    string type
    string data
    boolean is_read
    date createdAt
  }
  MODERATIONLOGS {
    string id PK
    string moderator_id FK
    string action
    string target_type
    string target_id
    string reason
    string status
    object resolution
    date createdAt
    date updatedAt
  }
  ANALYTICS {
    string id PK
    date date
    object metrics
    array popularDestinations
    array popularPlaces
    date createdAt
    date updatedAt
  }

  USERS ||--o{ TRIPS : "creates"
  USERS ||--o{ REVIEWS : "writes"
  USERS ||--o{ POSTS : "creates"
  USERS ||--o{ COMMENTS : "writes"
  USERS ||--o{ FOLLOWS : "follows"
  USERS ||--o{ LIKES : "likes"
  USERS ||--o{ NOTIFICATIONS : "receives"
  USERS ||--o{ MODERATIONLOGS : "moderates"
  TRIPS ||--o{ PLACES : "includes through activities"
  PLACES ||--o{ REVIEWS : "receives"
  POSTS ||--o{ COMMENTS : "has"
  POSTS ||--o{ LIKES : "receives"
  COMMENTS ||--o{ LIKES : "receives"
  REVIEWS ||--o{ LIKES : "receives"
  COMMENTS ||--o{ COMMENTS : "replies to"
  ANALYTICS ||--o{ PLACES : "tracks"
